# cpp-lab-2

./: CMakeLists.txt  lab2  main.c  main.py
